--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -7,11 +7,20 @@
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-<div class="row" th:each="artwork: ${artworks}">
+<div class="row" th:each="artwork: ${artworks}" th:attr="onclick=|openArtwork('${artwork.id}')|">
     <p th:text="${artwork.artworkName}"></p>
     <p th:text="${artwork.artist}"></p>
     <p th:text="${artwork.price}"></p>
+<!--    <img th:src="'data:image/jpeg;base64,' + ${image}">-->
 </div>
+<script>
+    function openArtwork(artworkId) {
+        console.log(artworkId);
+        const url = `http://localhost:8080/artworks/${artworkId}`;
+        console.log(url);
+        window.open(url);
+    }
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
