Zeige die jeweiligen Bilder zu einem Artwork auf artworkInformation.html an; Ändere die Logik Struktur [VA-52]

--- a/src/main/resources/templates/artworks/artworkInformation.html
+++ b/src/main/resources/templates/artworks/artworkInformation.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <p th:text="${artwork.artworkName}"></p>
+<img th:each="imageUrl: ${artwork.imagesUrl}" th:src="${imageUrl}">
 </body>
 </html>
