--- a/src/main/resources/templates/user/registrationUser.html
+++ b/src/main/resources/templates/user/registrationUser.html
@@ -2,39 +2,32 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="../css/signin.css">
 </head>
 <body>
-<div>
-    <form action="#" th:action="@{/registration/user}" th:object="${user}" method="post">
-        <div>
-            <label>first Name</label>
-            <input type="text" th:field="*{firstName}"/>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <!-- Tabs Titles -->
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="https://img.icons8.com/material-sharp/96/000000/art-book.png" id="icon" alt="Art Icon" />
         </div>
-
-        <div>
-            <label>second Name</label>
-            <input type="text" th:field="*{secondName}"/>
-        </div>
-
-        <div>
-            <label>Email</label>
-            <input type="email" th:field="*{email}"/>
-        </div>
-
-        <div>
-            <label>Password</label>
-            <input type="password" th:field="*{password}"/>
-        </div>
-
-        <div>
-            <label>repeat Password</label>
-            <input type="password" th:field="*{repeatPassword}"/>
-        </div>
-
-        <input type="submit" value="Submit"/>
-    </form>
+        <!---->
+        <form action="#" th:action="@{/registration/user}" th:object="${user}" method="post">
+            <input type="text" th:field="*{firstName}" id="firstname" class="fadeIn second" name="firstname" placeholder="First Name" required/>
+            <input type="text" th:field="*{secondName}" id="secondname" class="fadeIn second" name="secondname" placeholder="Second Name" required/>
+            <input type="email" th:field="*{email}" id="email" class="fadeIn second" name="email" placeholder="your@email.com" required/>
+            <input type="password" th:field="*{password}" id="password" class="fadeIn second" name="password" placeholder="Password" minlength="8" required/>
+            <input type="password" th:field="*{repeatPassword}" id="repeatPassword" class="fadeIn second" name="repeatPassword" placeholder="Repeat the Password" required/>
+            <input type="submit" class="fadeIn fourth" value="Register">
+        </form>
+    </div>
 </div>
-
 </body>
 </html>
