--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -25,7 +25,7 @@
 
     <!-- Login Form -->
     <form th:action="@{/login.html}" method="post">
-      <input type="email" id="username" name="username" autofocus="autofocus" class="fadeIn second" placeholder="Email">
+      <input type="email" id="username" name="username" autofocus="autofocus" class="fadeIn second" placeholder="your@email.com">
       <input type="password" id="password" name="password" class="fadeIn third" placeholder="Password">
       <input type="submit" value="Log in" class="fadeIn fourth">
     </form>
