Ändere die LoginPage in der SecurityConfig von ("/login.html") -> ("/login"); Passe das Error Handling an, sodass die defaultError Page richtig ausgegeben wird [VA-89]

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Login Form -->
-    <form th:action="@{/login.html}" method="post">
+    <form th:action="@{/login}" method="post">
       <input type="email" id="username" name="username" autofocus="autofocus" class="fadeIn second" placeholder="your@email.com">
       <input type="password" id="password" name="password" class="fadeIn third" placeholder="Password">
       <input type="submit" value="Log in" class="fadeIn fourth">
