Füge Error Pages mit Aufspaltung nach FehlerCode und zugehöriges Styling hinzu (1. + 3. Button funkitonsfähig) [VA-87]

--- a/src/main/resources/templates/error/500erErrors.html
+++ b/src/main/resources/templates/error/500erErrors.html
@@ -21,7 +21,7 @@
                     Oops!
                 </h1>
                 <h3>Error Code: <span th:text="${error.statusCode}"></span></h3>
-                <h4>Wow! This error does not occur often. Consider telling us about this with our contact form!</h4>
+                <h4>It seems like this error is caused by us, Sorry! You can´t do anything about that, but tell us!</h4>
                 <div class="error-details">
                     <p th:text="${error.message}"></p>
                 </div>
