--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -63,7 +63,10 @@ h2 {
     border-radius: 0 0 10px 10px;
 }
 
-
+#displayStrength {
+    padding-top: 2rem;
+    max-width: 8rem;
+}
 
 /* TABS */
 
