--- a/src/main/resources/templates/user/registrationUser.html
+++ b/src/main/resources/templates/user/registrationUser.html
@@ -25,9 +25,62 @@
             <input type="email" th:field="*{email}" id="email" class="fadeIn second" name="email" placeholder="your@email.com" required/>
             <input type="password" th:field="*{password}" id="password" class="fadeIn second" name="password" placeholder="Password" minlength="8" required/>
             <input type="password" th:field="*{repeatPassword}" id="repeatPassword" class="fadeIn second" name="repeatPassword" placeholder="Repeat the Password" required/>
+            <div id = "displayStrength"></div>
             <input type="submit" class="fadeIn fourth" value="Register">
         </form>
     </div>
 </div>
 </body>
+<script>
+
+    let timeout;
+
+    // traversing the DOM and getting the input and span using their IDs
+
+    let password = document.getElementById('password')
+    let strengthBadge = document.getElementById('displayStrength')
+
+    // The strong and weak password Regex pattern checker
+
+    let strongPassword = new RegExp('(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])(?=.{10,})')
+    let mediumPassword = new RegExp('((?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])(?=.{8,}))|((?=.*[a-z])(?=.*[A-Z])(?=.*[^A-Za-z0-9])(?=.{8,}))')
+
+    function StrengthChecker(PasswordParameter){
+        // We then change the badge's color and text based on the password strength
+
+        if(strongPassword.test(PasswordParameter)) {
+            strengthBadge.style.backgroundColor = "green"
+            strengthBadge.textContent = 'Strong'
+        } else if(mediumPassword.test(PasswordParameter)){
+            strengthBadge.style.backgroundColor = 'blue'
+            strengthBadge.textContent = 'Medium'
+        } else{
+            strengthBadge.style.backgroundColor = 'red'
+            strengthBadge.textContent = 'Weak'
+        }
+    }
+
+    // Adding an input event listener when a user types to the  password input
+
+    password.addEventListener("input", () => {
+
+        //The badge is hidden by default, so we show it
+
+        strengthBadge.style.display= 'block'
+        clearTimeout(timeout);
+
+        //We then call the StrengChecker function as a callback then pass the typed password to it
+
+        timeout = setTimeout(() => StrengthChecker(password.value), 500);
+
+        //Incase a user clears the text, the badge is hidden again
+
+        if(password.value.length !== 0){
+            strengthBadge.style.display != 'block'
+        } else{
+            strengthBadge.style.display = 'none'
+        }
+    });
+
+</script>
 </html>
