--- a/src/main/resources/templates/artworks/artworkInformation.html
+++ b/src/main/resources/templates/artworks/artworkInformation.html
@@ -7,7 +7,7 @@
 <body>
 <p th:text="${artwork.artworkName}"></p>
 <img th:each="imageUrl: ${artwork.imagesUrl}" th:src="${imageUrl}">
-<form action="#" th:action="@{/registration/user}" th:object="${user}" method="post">
+<form action="#" th:action="@{/user/}" th:object="${user}" method="post">
 
 </form>
 <button type="submit"
