--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <title>Home</title>
 </head>
 <body>
-<a th:href="@{/registration/user}">Registration</a>
+<a th:href="@{/registration/user}">Registration</a> <br>
+<a th:href="@{/artworks}">Artworks</a> <br>
+<a th:href="@{/shopping_cart}">ShoppingCart</a> <br>
 </body>
 </html>
