--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -36,9 +36,8 @@
       <a class="underlineHover" href="#">Forgot Password?</a>
     </div>
       <form action="#" th:action="@{/registration/user}" method="get">
-        <input type="hidden" th:value="${returnUrl}" name="returnUrl"/>
-        <input type="hidden" th:value="${jsessionid}" name="jsessionid"/>
-        <button class="underlineHover" type="submit">Signup first first</button>
+        <button class="underlineHover" type="submit">Signup first</button>
+        <input type="hidden" th:if="${returnUrl!=null}" th:value="${returnUrl}" name="returnUrl"/>
       </form>
 
 
