Redirecte statt zum Index.html auf die /artworks page; Außerdem fixe kleinere bugs und lösche ungenutzten Code [VA-95]

--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -67,7 +67,7 @@
                 </div>
                 <div sec:authorize="isAnonymous()">
                     <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
-                    <a th:href="@{/user/registrationUser}" class="nav-link"  style="color: teal">Register</a>
+                    <a th:href="@{/registration/user}" class="nav-link"  style="color: teal">Register</a>
                 </div>
 
 
