Ordne jegliches js und css. VA-104-jegliches-javascript-und-css-ed

--- a/src/main/resources/templates/artworks/artworkInformation.html
+++ b/src/main/resources/templates/artworks/artworkInformation.html
@@ -10,16 +10,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.navbar-light .dmenu').hover(function () {
-                $(this).find('.sm-menu').first().stop(true, true).slideDown(150);
-            }, function () {
-                $(this).find('.sm-menu').first().stop(true, true).slideUp(105)
-            });
-        });
-    </script>
-
+    <script th:src="@{/javascript/documentReady.js}"></script>
     <link href="../static/css/mainpage.css" th:href="@{/css/mainpage.css}" rel="stylesheet">
 
     <!-- uncomment for production, comment the next other, copy css from artworks to static
