--- a/src/main/resources/templates/user/successMessage.html
+++ b/src/main/resources/templates/user/successMessage.html
@@ -8,7 +8,7 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link href="../static/css/successmessage.css" th:href="@{/css/successmessage.css.css}" rel="stylesheet">
+  <link href="../static/css/successmessage.css" th:href="@{/css/successmessage.css}" rel="stylesheet">
 </head>
 <div id='upper-side'>
   <i class="fa fa-check"></i>
@@ -20,5 +20,3 @@
   </p>
   <a href="#" id="contBtn">Continue</a>
 </div>
-</div>
-</html>
