--- a/src/main/resources/templates/artworks/shoppingCart.html
+++ b/src/main/resources/templates/artworks/shoppingCart.html
@@ -15,14 +15,7 @@
     <p th:text="${artwork.price}"></p>
     <img th:src="${artwork.primaryImageUrl}">
 </div>
-<script>
-    function openArtwork(generatedArtworkName) {
-        console.log(generatedArtworkName);
-        const url = `http://localhost:8080/artworks/${generatedArtworkName}`;
-        console.log(url);
-        window.location.replace(url);
-    }
-</script>
+<script th:src="@{/javascript/openArtworkFunction.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
