--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -63,7 +63,11 @@
             <li class="nav-item">
 
                 <div sec:authorize="isAuthenticated()">
-                    <a th:href="@{/logout}"  class="nav-link"  style="color: teal">Log out</a>
+                    <form action="/logout" method="post">
+<!--                        <a th:href="@{/logout}"  class="nav-link"  style="color: teal">Log out</a>-->
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <button type="submit">Log out</button>
+                    </form>
                 </div>
                 <div sec:authorize="isAnonymous()">
                     <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
