Füge Warenkorb Frontend hinzu[VA-70]

--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-    color: #92badd;
+    color: #CE6060;
     display:inline-block;
     text-decoration: none;
     font-weight: 400;
@@ -76,7 +76,7 @@ h2.inactive {
 
 h2.active {
     color: #0d0d0d;
-    border-bottom: 2px solid #5fbae9;
+    border-bottom: 2px solid #CE6060;
 }
 
 
@@ -84,7 +84,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #56baed;
+    background-color: #DB3C3C;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -93,8 +93,8 @@ input[type=button], input[type=submit], input[type=reset]  {
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(219,60,60,0.4);
+    box-shadow: 0 10px 30px 0 rgba(219,60,60,0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 20px 40px 20px;
@@ -105,7 +105,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #39ace7;
+    background-color: #DB3C3C;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -136,7 +136,7 @@ input[type=text],[type=email],[type=password] {
 
 input[type=text]:focus {
     background-color: #fff;
-    border-bottom: 2px solid #5fbae9;
+    border-bottom: 2px solid #DB3C3C;
 }
 
 input::placeholder {
@@ -234,7 +234,7 @@ input::placeholder {
     bottom: -10px;
     width: 0;
     height: 2px;
-    background-color: #56baed;
+    background-color: #DB3C3C;
     content: "";
     transition: width 0.2s;
 }
