--- a/src/main/resources/templates/artworks/shoppingCart.html
+++ b/src/main/resources/templates/artworks/shoppingCart.html
@@ -7,6 +7,14 @@
     <title>ShoppingCart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="../static/css/mainpage.css" th:href="@{/css/mainpage.css}" rel="stylesheet">
+
+    <!-- uncomment for production, comment the next other, copy css from artworks to static
+    <link href="mainpage.css" rel="stylesheet">-->
 </head>
 <body>
 <nav class="navbar navbar-expand-sm   navbar-light bg-light">
