--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+  <link rel="icon" type="image/svg+xml" th:href="@{SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login</title>
+  <link rel="shortcut icon" type="image/x-icon" th:href="@{/pictures/SAOFLogo.ico}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -18,7 +20,7 @@
 
     <!-- Icon -->
     <div class="fadeIn first">
-      <img src="https://img.icons8.com/material-sharp/96/000000/art-book.png" id="icon" alt="Art Icon" />
+      <img th:src="@{/pictures/SAOFLogo.svg}" id="icon" alt="Art Icon" />
     </div>
 
     <!-- Login Form -->
