--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -60,6 +60,7 @@
                         <button type="submit">Log out</button>
                     </form>
                     <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"  style="color: teal">Register as Artist</a>
+                    <a sec:authorize="hasRole('ROLE_ARTIST')" th:href="@{/my_artworks}" class="nav-link"  style="color: teal">My Artworks</a>
                 </div>
                 <div sec:authorize="isAnonymous()">
                     <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
