--- a/src/main/resources/templates/artworks/shoppingCart.html
+++ b/src/main/resources/templates/artworks/shoppingCart.html
@@ -58,6 +58,7 @@
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <button type="submit">Log out</button>
                     </form>
+                    <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"  style="color: teal">Register as Artist</a>
                 </div>
                 <div sec:authorize="isAnonymous()">
                     <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
