--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -118,16 +118,28 @@
                 <div class="modal-body">
                     <input type="text" th:field="*{artworkPrice}" class="fadeIn second" name="artworkPrice" placeholder="Price" required/>
                     <input type="text" th:field="*{artworkDescription}" class="fadeIn second" name="artworkDescription" placeholder="Description"/>
-                    <input type="file" th:field="*{primaryImage}" class="fadeIn second" name="artworkImages" accept=".jpg, .png, .jpeg">
-                    <input type="file" th:field="*{secondImage}" class="fadeIn second" name="secondImage" accept=".jpg, .png, .jpeg">
-                    <input type="file" th:field="*{thirdImage}" class="fadeIn second" name="thirdImage" accept=".jpg, .png, .jpeg">
-
+<!--                    <input type="file" th:field="*{primaryImage}" class="fadeIn second" name="artworkImages" accept=".jpg, .png, .jpeg">-->
+<!--                    <input type="file" th:field="*{secondImage}" class="fadeIn second" name="secondImage" accept=".jpg, .png, .jpeg">-->
+<!--                    <input type="file" th:field="*{thirdImage}" class="fadeIn second" name="thirdImage" accept=".jpg, .png, .jpeg">-->
+                    <input type="file" th:field="*{images}" class="fadeIn second" enctype="multipart/form-data" name="images" accept=".jpg, .png, .jpeg" multiple>
+<!--                    <input type="file" class="form-control" id="files"-->
+<!--                           placeholder="Upload Multiple Files" name="files" multiple/>-->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary">Add</button>
                 </div>
             </form>
+<!--            <form method="POST" enctype="multipart/form-data" id="fileUploadForm" action="/create_artwork/test">-->
+<!--                <div class="form-group">-->
+<!--                    <label class="control-label" for="files">Upload Multiple Files:</label>-->
+<!--                    <input type="file" class="form-control"-->
+<!--                           placeholder="Upload Multiple Files" name="files" multiple/>-->
+<!--                </div>-->
+<!--                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+<!--                <button type="submit" class="btn btn-default" id="btnSubmit">Upload</button>-->
+<!--                <a href="/files" class="btn btn-default" role="button">Files</a>-->
+<!--            </form>-->
         </div>
     </div>
 </div>
