--- a/src/main/resources/templates/user/account.html
+++ b/src/main/resources/templates/user/account.html
@@ -19,13 +19,15 @@
 <div th:insert="~{nav :: copy}"></div>
 <!-- NAVBAR -->
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="contactus-style">
-        <p>contact info here!!</p>
-      </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="impressum-style">
+                <h1>Account</h1>
+                <hr>
+                <
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <!-- footer-->
