--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -13,92 +13,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="../static/css/mainpage.css" th:href="@{/css/mainpage.css}" rel="stylesheet">
 
-    <!-- uncomment for production, comment the next other, copy css from artworks to static
-    <link href="mainpage.css" rel="stylesheet">-->
 </head>
 <body>
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-sm   navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/artworks}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item dropdown dmenu">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    Our Service
-                </a>
-                <div class="dropdown-menu sm-menu">
-                    <a class="dropdown-item" href="#">service2</a>
-                    <a class="dropdown-item" href="#">service 2</a>
-                    <a class="dropdown-item" href="#">service 3</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Call</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  style="color: black">Be Smart - Buy Art! Der fröhlich freundliche Kunst Dealer</a>
-            </li>
-
-            <li class="nav-item">
-
-                <div sec:authorize="isAuthenticated()">
-                    <form action="/logout" method="post">
-<!--                        <a th:href="@{/logout}"  class="nav-link"  style="color: teal">Log out</a>-->
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                        <button type="submit">Log out</button>
-                    </form>
-                    <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"  style="color: teal">Register as Artist</a>
-                    <a sec:authorize="hasRole('ROLE_ARTIST')" th:href="@{/my_artworks}" class="nav-link"  style="color: teal">My Artworks</a>
-                </div>
-                <div sec:authorize="isAnonymous()">
-                    <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
-                    <a th:href="@{/registration/user}" class="nav-link"  style="color: teal">Register</a>
-                </div>
-
-
-            </li>
-
-            <li class="nav-item">
-                <a th:href="@{/shopping_cart}" class="nav-link"  style="color: teal">Shopping Cart</a>
-            </li>
-
-
-        </ul>
-        <div class="social-part">
-            <img src="https://img.icons8.com/doodle/48/000000/instagram-new.png" class="social"/>
-            <img src="https://img.icons8.com/carbon-copy/100/000000/tiktok.png" class="social"/>
-            <img src="https://img.icons8.com/doodle/48/000000/paypal.png" class="social"/>
-        </div>
-    </div>
-</nav>
+<div th:insert="~{nav :: copy}"></div>
 <!-- NAVBAR -->
 <!-- Main Content -->
-<!--
-<div class="row" th:each="artwork: ${artworks}" th:attr="onclick=|openArtwork('${artwork.generatedArtworkName}')|">
-    <p th:text="${artwork.artworkName}">artworkname</p>
-    <p th:text="${artwork.price}">price</p>
-    <div class="img" style="border:1px solid black;">
-        <img th:src="${artwork.primaryImageUrl}" alt="this is art img">
-    </div>
-
-</div>
-
-<hr>
-<hr>
--->
-
 <div class="container-fluid">
     <div class="category1 flex-row" style="
     display: flex;
@@ -109,8 +29,6 @@
 ">
         <div class="arts" style="max-width: 20rem; padding-right: 2rem;"
              th:each="artwork: ${artworks}" th:attr="onclick=|openArtwork('${artwork.generatedArtworkName}')|" title="Click to View more">
-
-
             <h2><span th:text="${artwork.artworkName}">Artworkname</span></h2>
             <div class="img" style="border:1px solid black;">
                 <img th:src="${artwork.primaryImageUrl}" alt="this is art img">
@@ -121,21 +39,6 @@
 </div>
 
 
-<!-- footer-->
-<footer class="footer">
-    <div class="container">
-        <div class="about-us">
-            <h2>About Our Mission</h2>
-            <p>
-                Lorem Ipsum Postem git
-            </p>
-        </div>
-    </div>
-
-    <div class="rights flex-row">
-        <h4 class="text-gray">A Project by Students</h4>
-    </div>
-</footer>
 
 
 <script th:src="@{/javascript/open_artwork_func.js}"></script>
@@ -144,5 +47,9 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
 <script th:src="@{/javascript/document_ready.js}"></script>
+
+<!-- footer-->
+<div th:insert="~{footer :: copy}"></div>
+<!-- footer-->
 </body>
 </html>
