--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -105,7 +105,7 @@
     Add new Artwork
 </button>
 
-<!-- Modal -->
+<!-- Add Artwork Modal -->
 <div class="modal fade" id="addArtworkModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
