--- a/src/main/resources/templates/artworks/artworkInformation.html
+++ b/src/main/resources/templates/artworks/artworkInformation.html
@@ -2,12 +2,13 @@
 <html xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="en">
 <head>
-    <link rel="icon" type="image/svg+xml"  th:href="@{/pictures/SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
+    <link rel="icon" type="image/svg+xml" th:href="@{/pictures/SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
     <meta charset="UTF-8">
     <title>Home - ART</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,7 +20,8 @@
 <body>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-sm   navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -48,7 +50,7 @@
                 <a class="nav-link" href="#">Call</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  style="color: black">Be Smart - Buy Art! Der fröhlich freundliche Kunst Dealer</a>
+                <a class="nav-link" style="color: black">Be Smart - Buy Art! Der fröhlich freundliche Kunst Dealer</a>
             </li>
 
             <li class="nav-item">
@@ -56,21 +58,22 @@
                 <div sec:authorize="isAuthenticated()">
                     <form action="/logout" method="post">
                         <!--                        <a th:href="@{/logout}"  class="nav-link"  style="color: teal">Log out</a>-->
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <button type="submit">Log out</button>
                     </form>
-                    <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"  style="color: teal">Register as Artist</a>
+                    <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"
+                       style="color: teal">Register as Artist</a>
                 </div>
                 <div sec:authorize="isAnonymous()">
-                    <a th:href="@{/login}" class="nav-link"  style="color: teal">Log in</a>
-                    <a th:href="@{/user/registrationUser}" class="nav-link"  style="color: teal">Register</a>
+                    <a th:href="@{/login}" class="nav-link" style="color: teal">Log in</a>
+                    <a th:href="@{/user/registrationUser}" class="nav-link" style="color: teal">Register</a>
                 </div>
 
 
             </li>
 
             <li class="nav-item">
-                <a th:href="@{/shopping_cart}" class="nav-link"  style="color: teal">Shopping Cart</a>
+                <a th:href="@{/shopping_cart}" class="nav-link" style="color: teal">Shopping Cart</a>
             </li>
 
 
@@ -83,7 +86,6 @@
     </div>
 
 </nav>
-<!-- NAVBAR -->
 <h2><span th:text="${artwork.artworkName}">Name</span></h2>
 <div class="img">
     <img th:each="imageUrl: ${artwork.imagesUrl}" th:src="${imageUrl}">
@@ -96,10 +98,79 @@
     <input type="hidden" th:value="${artwork.generatedArtworkName}" name="artworkName"/>
     <button class="button" type="submit">Add to Cart</button>
 </form>
-<form th:if="${isFromArtist}" action="#" th:action="@{/remove_artwork}" method="post">
-    <input type="hidden" th:value="${artwork.generatedArtworkName}" name="artworkName"/>
-    <button class="button" type="submit">Remove Artwork</button>
-</form>
+<button th:if="${editArtworkDTO!=null}" type="button" class="btn btn-primary" data-bs-toggle="modal"
+        data-bs-target="#editArtworkModal">
+    Edit Artwork
+</button>
+
+<!-- Edit Artwork Modal -->
+<div class="modal fade" id="editArtworkModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form action="#" th:action="@{/edit_artwork}" th:object="${editArtworkDTO}"
+                  enctype="multipart/form-data"
+                  method="post">
+                <div class="modal-header">
+                    <input id="addArtworkModalLabel" type="text" th:field="*{artworkName}" class="fadeIn second"
+                           name="artworkName" placeholder="Artwork name" required/>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" th:field="*{artworkPrice}" class="fadeIn second" name="artworkPrice"
+                           placeholder="Price" required/>
+                    <input type="text" th:field="*{artworkDescription}" class="fadeIn second" name="artworkDescription"
+                           placeholder="Description"/>
+                    <input type="file" id="firstImageInput" th:field="*{firstImage}"
+                           onchange="reload_image('firstImage', this)" class="fadeIn second"
+                           enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <!--                    first image-->
+                    <!--                    <img th:if="*{oldImageUrls.size()>0}" th:src="*{oldImageUrls[0]}">-->
+                    <!--                    <img th:if="*{oldImageUrls.size()==0}">-->
+                    <!--                    <img th:if="*{oldImageUrls.size()>0 || firstImage ne null}" th:src="*{oldImageUrls[0]}"-->
+                    <img th:if="*{firstImage ne null}"
+                         th:src="*{'data:image/'+ firstImage.getContentType()+';base64, ' + firstImage.getImageBase64()}"
+                         id="firstImage">
+                    <input type="file" id="secondImageInput" th:field="*{secondImage}"
+                           onchange="reload_image('secondImage', this)" class="fadeIn second"
+                           enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <img th:if="*{firstImage ne null}"
+                         th:src="*{'data:image/'+ firstImage.getContentType()+';base64, ' + firstImage.getImageBase64()}"
+                         id="secondImage">
+                    <!--                    <img th:if="*{oldImageUrls.size()>1 || secondImage ne null}" src="" th:src="*{oldImageUrls.size()>1? oldImageUrls[1]}"-->
+                    <input type="file" id="thirdImageInput" th:field="*{thirdImage}"
+                           onchange="reload_image('thirdImage', this)" class="fadeIn second"
+                           enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <img th:if="*{firstImage ne null}"
+                         th:src="*{'data:image/'+ firstImage.getContentType()+';base64, ' + firstImage.getImageBase64()}"
+                         id="thirdImage">
+                    <!--                    <img th:if="*{oldImageUrls.size()>2 || thirdImage ne null}" th:src="*{oldImageUrls[2]}"-->
+
+                    <input type="file" id="forthImageInput" th:field="*{forthImage}"
+                           onchange="reload_image('forthImage')"
+                           class="fadeIn second" enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <img th:if="*{firstImage ne null}"
+                         th:src="*{'data:image/'+ firstImage.getContentType()+';base64, ' + firstImage.getImageBase64()}"
+                         id="forthImage">
+                    <!--                    <img th:if="*{oldImageUrls.size()>3 || forthImage ne null}" th:src="*{oldImageUrls[3]}"-->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+            </form>
+
+            <form action="#" th:action="@{/remove_artwork}" method="post">
+                <input type="hidden" th:value="${artwork.generatedArtworkName}" name="artworkName"/>
+                <button class="button" type="submit">Remove Artwork</button>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 <script th:src="@{/javascript/document_ready.js}"></script>
+<script th:src="@{/javascript/reload_image.js}"></script>
+
 </body>
 </html>
